@@ -2,6 +2,9 @@ Changes in @NEW@:
   o Bugfix: builds that resulted in changesets containg the same file
     in different locations would fail to commit if the files differed
     only by mtime. (CNY-1114)
+  o Bugfix: the mirror script now correctly handles the cases where
+    the PathIdConflict erros are raised by certain source repositories
+    during mirroring (CNY-426)
 
 Changes in 1.0.40:
   o Build Changes:
